--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Tiny image comparison lib",
   "main": "simi.js",
   "dependencies": {
+    "canvas": "^1.6.7",
     "grunt": "~0.4.1",
-    "grunt-mocha": "~0.3.0",
     "grunt-contrib-jshint": "~0.3.0",
-    "phantomjs": "~1.8.2-2",
-    "grunt-lib-phantomjs": "~0.2.0"
+    "grunt-lib-phantomjs": "~0.2.0",
+    "grunt-mocha": "~0.3.0",
+    "phantomjs": "~1.8.2-2"
   },
   "devDependencies": {},
   "scripts": {
@@ -21,5 +22,7 @@
   "author": "",
   "license": "BSD",
   "readmeFilename": "README.md",
-  "engines" : { "node" : ">=0.9.0" }
+  "engines": {
+    "node": ">=0.9.0"
+  }
 }
